--- a/theme.css
+++ b/theme.css
@@ -39,11 +39,11 @@ span.cm-error		{ color: red; }
 }
 
 .CodeMirror-cursor {
-	border-left: 2px solid #fff !important;
+	border-left: 2px solid #fc3d7f !important;
 }
 
 .CodeMirror-overwrite .CodeMirror-cursor {
-    border-bottom: 1px solid #fff !important;
+    border-bottom: 1px solid #fff!important;
     border-left: none !important;
 }
 
@@ -57,7 +57,7 @@ span.cm-error		{ color: red; }
 }
 
 .CodeMirror-selected {
-    background-color: #004581;
+    background-color: rgba(555, 555, 555, 0.09);
 }
 
 /* Active Line */
@@ -76,16 +76,15 @@ span.cm-error		{ color: red; }
 }
 
 /* Matching */
-
+ 
 .CodeMirror-matchingbracket {
-    background: #555 !important;
+    background: #28735E !important;
     color: #fff !important;
 }
 
 .CodeMirror-matchingtag {
     background: #333 !important;
 }
-
 
 /* Non-editor styling */
 
@@ -95,4 +94,28 @@ span.cm-error		{ color: red; }
 
 #image-holder {
     color: #c8c6d1;
+}
+
+.CodeMirror-foldmarker {
+	background-color: #333;
+	border-color: #555;
+	color: #fff;
+	padding: 0px 5px;
+}
+
+.cm-header {
+	font-weight: bold;
+}
+
+.cm-strong {
+	font-weight: bold;
+}
+
+.cm-em {
+	font-style: italic;
+}
+
+.cm-searching {
+	background: black;
+	outline: 2px solid rgba(255, 255, 255, 0.25);
 }
