--- a/theme.css
+++ b/theme.css
@@ -48,15 +48,19 @@ span.cm-error		{ color: #fc3d7f;}
 }
 
 .CodeMirror-gutters {
-	background: #1e1e1e;
+	background: #1a1a1a;
 }
 
 .CodeMirror-linenumber {
 	color: #555555;
 }
 
-.CodeMirror-selected {
-    background-color: rgba(333, 333, 333, 0.1);
+.CodeMirror .CodeMirror-selected {
+	background: #4f4f4f;
+}
+
+.CodeMirror-focused .CodeMirror-selected {
+	background: #4f4f4f;
 }
 
 /* Active Line */
@@ -120,4 +124,276 @@ span.cm-error		{ color: #fc3d7f;}
 .cm-searching {
 	background: black;
 	outline: 2px solid rgba(255, 255, 255, 0.25);
+}
+
+
+
+
+
+
+
+
+
+#sidebar {
+	background: #1f1f1f;
+    border-right: 1px solid #0e0e0e
+}
+
+#sidebar #working-set-list-container {
+	background: #1f1f1f;
+}
+
+#sidebar .working-set-header,
+#sidebar .working-set-header-title {
+	background: #1f1f1f;
+}
+
+#sidebar #project-files-container {
+	background: #1f1f1f;
+}
+
+.sidebar-selection {
+	background: #151515 !important;
+	border: none !important;
+}
+
+#main-toolbar {
+	background: #1f1f1f;
+}
+
+#main-toolbar .buttons {
+	background: #1f1f1f;
+}
+
+#main-toolbar .buttons>a:hover,
+#main-toolbar .bottom-buttons>a:hover {
+	background-color: rgba(255, 255, 255, 0.12) !important;
+}
+
+#status-bar,
+#status-indicators {
+	background: #1f1f1f !important;
+}
+
+.pane-header {
+	background-color: #1f1f1f !important;
+}
+
+.modal-header,
+.modal-body,
+.modal-footer {
+	background: #1f1f1f !important;
+}
+
+.context-menu,
+.dropdown-menu {
+	background-color: #1f1f1f !important;
+}
+
+.table-striped tbody tr:nth-child(odd) td,
+.table-striped tbody tr:nth-child(odd) th,
+.table-striped tbody tr:nth-child(even) td,
+.table-striped tbody tr:nth-child(even) th {
+	background-color: #1f1f1f !important;
+}
+
+.dark .extension-manager-dialog .modal-header .nav-tabs>li>a {
+	background-color: #1f1f1f !important;
+	border: none;
+}
+
+.extension-manager-dialog .modal-header .nav-tabs>.active>a {
+	background-color: rgba(0, 0, 0, 0.1) !important;
+	border-bottom: 2px solid #2196f3 !important;
+}
+
+.extension-manager-dialog .modal-header .nav-tabs>li>a:hover {
+	background-color: rgba(255, 255, 255, 0.12) !important;
+}
+
+.extension-manager-dialog .modal-header #sort-attributes-icon {
+	background-color: #1f1f1f !important;
+}
+
+.extension-manager-dialog .modal-header .search {
+	background-color: #1f1f1f;
+}
+
+.extension-manager-dialog .modal-header .search-clear {
+	color: #E9EDED;
+}
+
+select,
+select>option {
+	background-color: #1f1f1f !important;
+}
+
+.btn-dropdown:not(.btn-status-bar) {
+	padding: 0.5rem 1.5rem 0.5rem 1rem !important;
+	background-color: #151515 !important;
+	box-shadow: none !important;
+	border: none;
+}
+
+.btn-dropdown:not(.btn-status-bar):after {
+	right: 0.5rem;
+	top: 1rem;
+	border-top: 5px solid #ccc;
+}
+
+.btn:not(.btn-status-bar):not(.btn-dropdown) {
+	padding: 0.5rem 1rem 0.5rem 1rem !important;
+	background-color: #151515 !important;
+	box-shadow: none !important;
+	border: none;
+}
+
+.btn-alt-quiet {
+	border-radius: 2px !important;
+}
+
+.btn-alt-quiet:hover {
+	border: 1px solid transparent !important;
+	box-shadow: none !important;
+	background-color: rgba(255, 255, 255, 0.12) !important;
+}
+
+.btn.btn-mini.install {
+	background-color: #4caf50 !important;
+	color: #fff !important;
+	font-size: 12px;
+}
+
+.btn.btn-mini.install:hover {
+	background-color: rgba(255, 255, 255, 0.12) !important;
+}
+
+.btn.btn-mini.remove {
+	background-color: #f44336 !important;
+	color: #fff !important;
+	font-size: 12px;
+}
+
+.btn.btn-mini.remove:hover {
+	background-color: rgba(255, 255, 255, 0.12) !important;
+}
+
+#project-files-header .btn-alt-quiet {
+	background-color: #151515 !important;
+	padding: 0.25rem 0.75rem 0.25rem 0.75rem !important;
+}
+
+#project-files-header.btn-alt-quiet:hover {
+	background-color: rgba(255, 255, 255, 0.12) !important;
+}
+
+.btn-group button {
+	height: auto !important;
+	border: none !important;
+}
+
+.btn:hover {
+	background-color: rgba(255, 255, 255, 0.12) !important;
+}
+
+.dialog-button.btn.primary {
+	background-color: #2196f3 !important;
+}
+
+.dialog-button.btn.primary:focus {
+	background-color: #1976d2 !important;
+}
+
+.extension-manager-dialog .modal-body .info-message {
+	background-color: #1f1f1f !important;
+}
+
+::-webkit-scrollbar {
+	background-color: #1f1f1f !important;
+}
+
+::-webkit-scrollbar-thumb {
+	box-shadow: 0 0 0 12px #151515 inset !important;
+}
+
+.bottom-panel {
+	background-color: #1f1f1f !important;
+}
+
+.toolbar {
+	background-color: #1f1f1f !important;
+}
+
+input[type=checkbox] {
+	border: none !important;
+	background-color: #151515 !important;
+	box-shadow: none !important;
+}
+
+.toolbar .nav .dropdown-menu li a,
+.context-menu .dropdown-menu li a,
+.codehint-menu .dropdown-menu li a {
+	line-height: 2 !important;
+}
+
+.dark .toolbar .nav .dropdown-menu li a:hover,
+.dark .context-menu .dropdown-menu li a:hover,
+.dark .codehint-menu .dropdown-menu li a:hover,
+.dark .toolbar .nav .dropdown-menu li a.highlight,
+.dark .context-menu .dropdown-menu li a.highlight,
+.dark .codehint-menu .dropdown-menu li a.highlight {
+	background-color: rgba(255, 255, 255, 0.12) !important;
+}
+
+.jstree-brackets {
+	line-height: 1.6 !important;
+}
+
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"],
+.uneditable-input {
+	background-color: #151515 !important;
+}
+
+.health-data-preview .preview-content-container {
+	background-color: #1f1f1f;
+	color: #E9EDED;
+	font-family: 'Consolas', 'Roboto Mono', monospace;
+}
+
+.modal-bar {
+	background: #1f1f1f !important;
+}
+
+.modal-bar #find-regexp.active,
+.dark .modal-bar #find-regexp:active,
+.dark .modal-bar #find-case-sensitive.active,
+.dark .modal-bar #find-case-sensitive:active {
+	background-color: #151515 !important;
+}
+
+.quick-search-container li {
+	padding: 1rem 1.5rem 1rem 1.5rem;
+}
+
+.quick-search-container,
+.quick-search-container li:nth-child(odd) {
+	background: #1f1f1f !important;
+}
+
+.quick-search-container li:hover {
+	background-color: rgba(255, 255, 255, 0.12) !important;
 }
